--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ai": "^4.3.16",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
-    "next": "^15.2.3",
+    "next": "15.3.8",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
